# lidar_bounding_box

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/lidar_bounding_box/: lidar_bounding_box_node.hpp
launch/: lidar_bounding_box.launch.py
src/: lidar_bounding_box_main.cpp  lidar_bounding_box_node.cpp
